# beehive

./: .gitignore  LICENSE  LICENSE-MIT.md  README.md  deploy.sh  dev-container.sh  justfile  observablehq.config.ts  package-lock.json  package.json  publish-beta.sh  publish-prod.sh  pyproject.toml  requirements.txt  resize-images.sh  reverse_dns_cache.json  temp.json
docker/: Dockerfile
docs/: 404.md  index.md
docs/blogroll/: blogroll.json.py  index.md
docs/hardware/: index.md  phone_sizes.json
docs/homepage/: links.json  projects.json
docs/software/: index.md  software.json.py
pages/: index.md
pages/blogroll/: index.md
pages/hardware/: index.md  prometheus.json.py
pages/media/: index.md  media.json.py  posters.py
pages/plex/: index.md
pages/software/: index.md
src/: index.md
src/465/: index.md
src/ai-crawling/: index.md
src/blogroll/: blogroll.json.py  index.md
src/budget/: electricity.csv  expense-log.csv  income-budget.csv  index.md  utilities.csv
src/chatgpt/: .gitignore  conversations.csv  index.md  redact-conversations.py
src/city-superposition/: index.md
src/controls-life/: index.md
src/discord-gender/: discord.json  index.md
src/embeddings/: clusters.jsonl  index.md  platform_metrics.json
src/feed/: 2024-05-10.md  2024-08-07.md  generate_feed.py  rss.xml.py  rss_cfg.toml
src/genesis/: index.md
src/hardware/: index.md  phone_sizes.json  prometheus.json.py
src/hyperstition/: index.md  signal-and-noise-20251015144213.json
src/mafia-walrus-2025/: index.md
src/manifold-altviz/: answers.json  index.md
(+49 files in other folders)
