[project]
name = "beehive"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "arrow>=1.3.0",
    "feedgen>=1.0.0",
    "geohash2>=1.1",
    "markdown2>=2.5.3",
    "notion-client>=2.3.0",
    "numpy>=2.2.4",
    "pillow>=11.1.0",
    "python-dotenv>=1.0.1",
    "python-frontmatter>=1.1.0",
    "requests>=2.32.3",
]
